Added basic add post function

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,4 +1,4 @@
-{{userData}}
+<{{userData}}
 
 {{userData.id}}
 {{userData.username}}
@@ -10,4 +10,4 @@
         {{> post-info post }}
     </li>
     {{/each}}
-</ol>
+</ol>>
