--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,7 +1,25 @@
-<ol class="post-list">
-    {{#each posts as |post|}}
-    <li>
-        {{> post-info post }}
-    </li>
-    {{/each}}
-</ol>
+<section>
+    <h2>Create New Post</h2>
+    <form class="new-post-form">
+        <div>
+            <label for="post-title">Title</label>
+            <input type="text" id="post-title" name="post-title" />
+        </div>
+        <div>
+            <label for="post-content">Content</label>
+            <input type="text" id="post-content" name="post-content" />
+        </div>
+        <button type="submit" class="createbtn">Create</button>
+    </form>
+</section>
+
+{{#if posts.length}}
+<article>
+    <h1>Your Previous Posts</h1>
+        <ol>
+            {{#each posts as |post|}}
+            <li>{{> post-info post}}</li>
+        </ol>
+</article>
+
+<script src="/javascript/add-post.js"></script>
