--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,13 +1,23 @@
-<{{userData}}
+<section>
+    <h2>Create New Post</h2>
+    <form class="new-post-form">
+        <div>
+            <label for="post-title">Title</label>
+            <input type="text" id="post-title" name="post-title" />
+        </div>
+        <div>
+            <label for="post-content">Content</label>
+            <input type="text" id="post-content" name="post-content" />
+        </div>
+        <button type="submit" class="createbtn">Create</button>
+    </form>
+</section>
 
-{{userData.id}}
-{{userData.username}}
-{{userData.email}}
-
-<ol class="post-list">
-    {{#each posts as |post|}}
-    <li>
-        {{> post-info post }}
-    </li>
-    {{/each}}
-</ol>>
+{{#if posts.length}}
+<article>
+    <h1>Your Previous Posts</h1>
+        <ol>
+            {{#each posts as |post|}}
+            <li>{{> post-info post}}</li>
+        </ol>
+</article>
