Adjusted the homeroutes

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,6 +14,7 @@
       <nav>
         {{#if loggedIn}}
         <a href="/homepage">Homepage</a>
+        <a href="/dashboard">Dashboard</a>
         <button id="logout">logout</button>
         {{else}}
         <a href="/login">login</a>
