Its finally working yay

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -19,6 +19,7 @@
         <ol>
             {{#each posts as |post|}}
             <li>{{> post-info post}}</li>
+            {{/each}}
         </ol>
 </article>
 {{/if}}
