--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,14 +13,22 @@
     <header>
       <nav>
         {{#if loggedIn}}
-        <a href="/homepage">Homepage</a>
+        <a href="/">Homepage</a>
         <a href="/dashboard">Dashboard</a>
         <button id="logout">logout</button>
         {{else}}
         <a href="/login">login</a>
         {{/if}}
       </nav>
+      
     </header>
+    <section>
+      {{#if loggedIn}}
+     <p hidden> {{user_id}}</p>
+     <p> {{user_name}}</p>
+     <p> {{user_email}}</p>
+          {{/if}}
+          </section>
     <main>
       {{{ body }}}
     </main>
