--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,18 +1,21 @@
 <article>
 
-{{userData}}
+    {{userData}}
 </article>
 
-{{userData.id}}
+{{!-- {{userData.id}}
 {{userData.username}}
-{{userData.email}}
+{{userData.email}} --}}
 <main class="container">
-<h6>Current Blogs</h6>
-<ol class="post-list">
-    {{#each posts as |post|}}
-    <li>
-        {{> post-info post }}
-    </li>
-    {{/each}}
-</ol>
+    <h6>Current Blogs</h6>
+    {{#if posts.length}}
+    <article>
+        <h1>Your Previous Posts</h1>
+        <ol>
+            {{#each posts as |post|}}
+            <li>{{> post post}}</li>
+            {{/each}}
+        </ol>
+    </article>
+    {{/if}}
 </main>
